@@ -2,6 +2,7 @@
 *.substvars
 files
 regina-normal
+regina-normal-dev
 regina-normal-doc
 regina-normal-server
 tmp
