@@ -1,0 +1,14 @@
+Regina Development Files for Debian
+-----------------------------------
+
+The Regina calculation engine is provided in the static C++ library
+/usr/lib/libregina-engine.a.  The corresponding headers can be found
+in /usr/include/regina-normal/.
+
+The calculation engine will not be provided as a shared library until
+its API settles somewhat.
+
+Thorough documentation for the calculation engine can be found in
+package regina-normal-doc.
+
+ -- Ben Burton <benb@acm.org>, Sun, 25 Nov 2001 15:13:26 -0600
