@@ -1,0 +1,2 @@
+usr/include
+usr/lib/libregina-engine.a
